# advent-of-code

./: .gitignore  adventrc.toml  pyproject.toml
2022/: day_1.py  day_2.py
2022/advent/: solution.py
data/: README.md
source/: __main__.py  day_1.py  day_2.py  day_3.py
source/2018/: day_1.c
source/2022/: day_1.py  day_2.py  day_3.py
source/2024/: day_1.py  day_10.py  day_11.py  day_2.py  day_3.py  day_4.py
source/advent/: __init__.py  solution.py
